# SciLyx

./: .gitmodules  CMakeLists.txt  README.md  docgenwindow.cpp  docgenwindow.h  lyxgen.cpp  lyxgen.h  lyxthread.cpp  lyxthread.h  scilyx.cpp  scilyx.h  scilyx.iss  scilyxplugin.cpp  scilyxplugin.h
lyxwidget/: CMakeLists.txt  classDescription.txt  config.h.in  configuredialog.cpp  configuredialog.h  configuredialog.ui  lyxwidget.cpp  lyxwidget.h  lyxwidget.ui
lyxwidget/lyx-lib/: CMakeLists.txt
lyxwidget/lyx-lib/boost/libs/regex/: CMakeLists.txt
lyxwidget/lyx-lib/boost/libs/signals/: CMakeLists.txt
lyxwidget/lyx-lib/development/attic/qmake/: Resources.qrc  lyx.pro
lyxwidget/lyx-lib/development/autotests/: findadv-06-in.txt
lyxwidget/lyx-lib/development/cmake/: LyxPackaging.cmake
lyxwidget/lyx-lib/development/cmake/modules/: LyXPaths.cmake
lyxwidget/lyx-lib/lib/: .gitignore  Makefile.am  configure.py
lyxwidget/lyx-lib/lib/ui/: stdcontext.inc  stdmenus.inc  stdtoolbars.inc
lyxwidget/lyx-lib/po/: ru.po
lyxwidget/lyx-lib/src/: Buffer.cpp  Buffer.h  BufferView.cpp  CMakeLists.txt  Cursor.cpp  CutAndPaste.cpp  CutAndPaste.h  FuncCode.h  LaTeXFeatures.cpp  Language.cpp  LayoutFile.cpp  Lexer.cpp  LyX.cpp  LyX.h  LyXAction.cpp  LyXRC.cpp  Makefile.am  Paragraph.cpp  Paragraph.h  RowPainter.h  ServerSocket.cpp  Session.cpp  Text.cpp  Text.h  Text3.cpp  TextMetrics.cpp  factory.cpp  main.cpp
lyxwidget/lyx-lib/src/client/: CMakeLists.txt
lyxwidget/lyx-lib/src/common/: CMakeLists.txt
lyxwidget/lyx-lib/src/datasources/: AbstractDataSelector.cpp  AbstractDataSelector.h  CMakeLists.txt  DataSourceManager.cpp  DataSourceManager.h  LapTable.h
lyxwidget/lyx-lib/src/datasources/csv/: CMakeLists.txt  CsvFile.cpp  CsvFile.h  CsvFile.ui
lyxwidget/lyx-lib/src/frontends/: Application.h  CMakeLists.txt  Clipboard.h
lyxwidget/lyx-lib/src/frontends/qt4/: CMakeLists.txt  ChartConverter.cpp  ChartConverter.h  DialogView.h  GuiAlert.cpp  GuiApplication.cpp  GuiApplication.h  GuiChart.cpp  GuiChart.h  GuiClipboard.cpp  GuiClipboard.h  GuiDialog.cpp  GuiDialog.h  GuiGraphics.cpp  GuiGraphics.h  GuiImage.cpp  GuiImage.h  GuiSelectData.cpp  GuiSelectData.h  GuiTableData.cpp  GuiTableData.h  GuiTabularDataCreate.cpp  GuiTabularDataCreate.h  GuiView.cpp  GuiView.h  GuiWorkArea.cpp  InsertTableWidget.cpp  Menus.cpp  QAnimatedPushButton.cpp  QAnimatedPushButton.h
lyxwidget/lyx-lib/src/frontends/qt4/ui/: ChartUi.ui  GraphicsUi.ui  SelectDataUi.ui  TableDataUi.ui  TabularDataCreateUi.ui
lyxwidget/lyx-lib/src/graphics/: CMakeLists.txt  GraphicsCacheItem.cpp  GraphicsConverter.cpp  GraphicsImage.h  GraphicsLoader.cpp  GraphicsLoader.h  GraphicsParams.cpp  GraphicsParams.h
lyxwidget/lyx-lib/src/insets/: CMakeLists.txt  Inset.cpp  Inset.h  InsetChart.cpp  InsetChart.h  InsetChartParams.cpp  InsetChartParams.h  InsetCode.h  InsetCommand.cpp  InsetExternal.cpp  InsetGraphics.cpp  InsetGraphics.h  InsetGraphicsParams.cpp  InsetGraphicsParams.cpp.Bt3584  InsetGraphicsParams.h  InsetInfo.cpp  InsetTabular.cpp  InsetText.cpp  InsetText.h  RenderGraphic.cpp  RenderGraphic.h
lyxwidget/lyx-lib/src/mathed/: CMakeLists.txt
lyxwidget/lyx-lib/src/support/: CMakeLists.txt  ForkedCalls.cpp  Package.cpp
lyxwidget/lyx-lib/src/tex2lyx/: CMakeLists.txt
lyxwidget/lyx-lib/zlib/: CMakeLists.txt
qfs/: CMakeLists.txt
sampleapp/: CMakeLists.txt  main.cpp  res.qrc
sampleapp/eqplugin/: CMakeLists.txt  eqplugin.cpp  eqplugin.h  eqwindow.cpp  eqwindow.h  eqwindow.ui
sampleapp/matplugin/: CMakeLists.txt  matplugin.cpp  matplugin.h  matwindow.cpp  matwindow.h  matwindow.ui
sampleapp/sampleplugin/: CMakeLists.txt  plugin.cpp  plugin.h  samplewindow.cpp  samplewindow.h  samplewindow.ui
